Update for RatePlanText

--- a/solution/Msh/Msh.WebApp/Areas/Admin/Views/RatePlansTexts/RatePlanTextAdd.cshtml
+++ b/solution/Msh/Msh.WebApp/Areas/Admin/Views/RatePlansTexts/RatePlanTextAdd.cshtml
@@ -26,6 +26,7 @@
 }
 
 @section Scripts {
+	<script src="~/js/mshapp/msh-routes.js"></script>
 	<script src="~/js/mshapp/msh-apiservice.js"></script>
 	<script src="~/js/mshapp/mshapp.js"></script>
 	<script src="~/js/mshapp/msh-itemdatesservice.js"></script>
