--- a/solution/Msh/Msh.WebApp/Areas/Admin/Views/RatePlansTexts/RatePlanTextEdit.cshtml
+++ b/solution/Msh/Msh.WebApp/Areas/Admin/Views/RatePlansTexts/RatePlanTextEdit.cshtml
@@ -1,4 +1,5 @@
-﻿@using Msh.WebApp.Models.Admin
+﻿@using Msh.Admin.Models.Const
+@using Msh.WebApp.Models.Admin
 
 @model Msh.HotelCache.Models.RatePlans.RatePlanText
 @{
@@ -9,7 +10,7 @@
     ViewBag.EditFormParam = new EditFormParam
     {
 	    ModelName = "RatePlanText",
-	    ReturnUrl = "/admin/hotels/RatePlansList?hotelCode=" + hotelCode,
+	    ReturnUrl = $"{AdminRoutes.RatePlansTexts}/RatePlansList?hotelCode={hotelCode}",
 	    ReturnText = "Rate Plans List",
 	    KeyPropertyLabel = "Rate Plans Code",
 	    KeyPropertyName = "RatePlanText",
@@ -26,6 +27,7 @@
 }
 
 @section Scripts {
+	<script src="~/js/mshapp/msh-routes.js"></script>
 	<script src="~/js/mshapp/msh-apiservice.js"></script>
 	<script src="~/js/mshapp/mshapp.js"></script>
 	<script src="~/js/mshapp/msh-itemdatesservice.js"></script>
