--- a/solution/Msh/Msh.WebApp/Areas/Admin/Views/Discounts/DiscountEditDatesOffer.cshtml
+++ b/solution/Msh/Msh.WebApp/Areas/Admin/Views/Discounts/DiscountEditDatesOffer.cshtml
@@ -30,7 +30,7 @@
 
 @await Html.PartialAsync("_SaveReturnButtons", new SaveReturnButtonsVm
 {
-	ReturnUrl = $"/Admin/discounts/DiscountsList?hotelCode={@hotelCode}&code={@itemCode}",
+	ReturnUrl = $"{AdminRoutes.Discounts}/DiscountsList?hotelCode={@hotelCode}&code={@itemCode}",
 	ReturnText = ConstReturnText.ReturnToList,
 	ButtonType = SaveReturnTypes.EventListener,
 	SaveOperation = "save-dates"
@@ -52,8 +52,10 @@
 }
 
 @section Scripts {
+	<script src="~/js/mshapp/msh-routes.js"></script>
 	<script src="~/js/mshapp/msh-ApiService.js"></script>
 	<script src="~/js/mshapp/mshapp.js"></script>
+	<script src="~/js/admin/msh-admin-palls.js"></script>
 	<script src="~/js/mshapp/msh-itemdatesservice.js"></script>
 	<script src="~/js/admin/hotels/msh-admin-discounts-offerdates.js"></script>
 }
