--- a/solution/Msh/Msh.WebApp/Areas/Admin/Views/Discounts/DiscountEditRatePlansEnable.cshtml
+++ b/solution/Msh/Msh.WebApp/Areas/Admin/Views/Discounts/DiscountEditRatePlansEnable.cshtml
@@ -1,4 +1,5 @@
-﻿@using Msh.WebApp.Areas.Admin.Models
+﻿@using Msh.Admin.Models.Const
+@using Msh.WebApp.Areas.Admin.Models
 @model Msh.WebApp.Models.Admin.ViewModels.CodeCheckListVm
 @{
 	var title = "Enabled Rate Plans";
@@ -33,7 +34,7 @@
 
 @await Html.PartialAsync("_SaveReturnButtons", new SaveReturnButtonsVm
 {
-	ReturnUrl = $"/Admin/Discounts/DiscountsList?hotelCode={@hotelCode}&code={@itemCode}",
+	ReturnUrl = $"{AdminRoutes.Discounts}/DiscountsList?hotelCode={@hotelCode}&code={@itemCode}",
 	ReturnText = ConstReturnText.ReturnToList,
 	ButtonType = SaveReturnTypes.EventListener,
 	SaveOperation = "save-button"
@@ -65,8 +66,10 @@
 }
 
 @section Scripts {
+	<script src="~/js/mshapp/msh-routes.js"></script>
 	<script src="~/js/mshapp/msh-ApiService.js"></script>
 	<script src="~/js/mshapp/mshapp.js"></script>
+	<script src="~/js/admin/msh-admin-palls.js"></script>
 	<script src="~/js/admin/hotels/msh-admin-check-codes-select.js"></script>
 	<script src="~/js/admin/hotels/msh-admin-discounts-rateplans.js"></script>
 }
