--- a/solution/Msh/Msh.WebApp/Areas/Admin/Views/Discounts/DiscountsList.cshtml
+++ b/solution/Msh/Msh.WebApp/Areas/Admin/Views/Discounts/DiscountsList.cshtml
@@ -85,8 +85,10 @@
 }
 
 @section Scripts{
+	<script src="~/js/mshapp/msh-routes.js"></script>
 	<script src="~/js/mshapp/msh-ApiService.js"></script>
 	<script src="~/js/mshapp/mshapp.js"></script>
+	<script src="~/js/admin/msh-admin-palls.js"></script>
 	<script src="~/js/admin/msh-admin-palls.js"></script>
 	<script src="~/js/admin/hotels/msh-admin-discounts.js"></script>
 }
