--- a/solution/Msh/Msh.WebApp/Areas/Admin/Views/Shared/Hotels/_DiscountEdit.cshtml
+++ b/solution/Msh/Msh.WebApp/Areas/Admin/Views/Shared/Hotels/_DiscountEdit.cshtml
@@ -1,4 +1,5 @@
 ﻿@using Microsoft.AspNetCore.Mvc.TagHelpers
+@using Msh.Admin.Models.Const
 @using Msh.HotelCache.Models.Discounts
 @using Msh.WebApp.Areas.Admin.Models
 @using Msh.WebApp.Models.Admin
@@ -193,7 +194,7 @@
 			@* Include the Save/Return/Publish/Archive/Load/Lock/Info buttons *@
 			@await Html.PartialAsync("_PublishArchiveLoadLock", new PublishArchiveLoadLockVm
 			{
-				ReturnUrl = string.Format("/Admin/Discounts/DiscountsList?hotelCode={0}", @hotelCode),
+				ReturnUrl = string.Format($"{AdminRoutes.Discounts}/DiscountsList?hotelCode={0}", @hotelCode),
 				ReturnText = ConstReturnText.ReturnToDash,
 				ButtonType = SaveReturnTypes.EventListener,
 				SaveOperation = "save-discounts"
