--- a/solution/Msh/Msh.WebApp/Areas/Admin/Views/Shared/Hotels/_RoomTypesTable.cshtml
+++ b/solution/Msh/Msh.WebApp/Areas/Admin/Views/Shared/Hotels/_RoomTypesTable.cshtml
@@ -1,4 +1,5 @@
 ﻿@using Microsoft.AspNetCore.Mvc.TagHelpers
+@using Msh.Admin.Models.Const
 @using Msh.WebApp.Models.Admin.ViewModels
 @model Msh.WebApp.Models.Admin.ViewModels.RoomTypeListVm
 @{
@@ -38,7 +39,7 @@
 	<th>
 		<div class="cell-outer">
 			<div class="cell-inner">
-				<a asp-controller="Hotels" asp-action="RoomTypeAdd" asp-route-hotelCode="@Model.HotelCode">
+					<a asp-controller="@AdminRoutes.RoomTypes" asp-action="RoomTypeAdd" asp-route-hotelCode="@Model.HotelCode">
 					<i class="fa-solid fa-plus"></i>
 				</a>
 			</div>
@@ -77,7 +78,8 @@
 						Code = rt.Code,
 						Index = rowIndex,
 						Count = count,
-						EditAction = "RoomTypeEdit"
+						EditAction = "RoomTypeEdit",
+						EditController = AdminRoutes.RoomTypes
 					};
 
 				}
